<resources>
    <string name="app_name">Teaspoon</string>
    <string name="teaspoon">Teaspoon</string>
    <string name="title_logo_dsc">Title Logo</string>
    <string name="app_dsc">A daily sugar intake calculator</string>
    <string name="welcome_button">Enter</string>
    <string name="widget">Navigation Button</string>
    <string name="daily">Today\'s Sugar Intake: 0 tsp</string>
    <string name="Search">Search\.\.\.</string>
    <string name="name_header">Name:</string>
    <string name="sugar_header">Sugar:</string>
    <string name="serving_amount_label"># of Servings:</string>
    <string name="serving_amount_num">1.0</string>
    <string name="total_sugar_amount_tsp">Total Sugar Amount (tsp):</string>
    <string name="submit">Submit</string>
    <string name="add_sugar">Add Sugar</string>
    <string name="welcome_user">Welcome, User!</string>
    <string name="app_id">rosehackapp-bieqd</string>
    <string name="here_s_your_sugar_intake_for_today">Here\'s your sugar intake for today:</string>
    <string name="_0_tsp">0 tsp</string>
    <string name="to_calendar">Go Back</string>
</resources>
