<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".FoodDetails">

    <TextView
        android:id="@+id/logo_text"
        android:layout_width="0dp"
        android:layout_height="76dp"
        android:background="@color/colorAccent"
        android:paddingLeft="124dp"
        android:text="@string/teaspoon"
        android:textColor="@color/colorPrimary"
        android:textSize="56sp"
        app:fontFamily="@font/lemonjelly_copy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="102dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/title_logo_dsc"
        app:layout_constraintEnd_toEndOf="@+id/logo_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/spoon_blue" />

    <TextView
        android:id="@+id/food_name"
        android:layout_width="267dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/sugar_header"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="42sp"
        android:textStyle="bold"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_text" />

    <TextView
        android:id="@+id/serving_size"
        android:layout_width="333dp"
        android:layout_height="99dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sugar_header"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_name" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/serving_amount_label"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serving_size"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/serving_input"
        android:layout_width="52dp"
        android:layout_height="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp"
        android:autofillHints="1.0"
        android:background="@color/colorAccent"
        android:hint="@string/serving_amount_num"
        android:text="@string/serving_amount_num"
        android:inputType="number"
        android:labelFor="@id/textView5"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/serving_size"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/sugar_total"
        android:layout_width="349dp"
        android:layout_height="59dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:text="@string/total_sugar_amount_tsp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/enter_serving"
        android:layout_width="70dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="getSugar"
        android:text="@string/submit"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/serving_input"
        app:layout_constraintTop_toBottomOf="@+id/serving_size" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="monospace"
        android:text="@string/add_sugar"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sugar_total"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>