<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teaspoon"
        android:textColor="@color/colorAccent"
        android:textSize="150sp"
        app:fontFamily="@font/LemonJelly"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/title_logo_dsc"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/spoon" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginBottom="56dp"
        android:text="@string/app_dsc"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        app:fontFamily="@font/LemonJelly"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.663"
        android:layout_marginStart="52dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="177dp"
        android:layout_height="86dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="84dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="enterButton"
        android:text="@string/welcome_button"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:fontFamily="@font/LemonJelly"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_marginStart="116dp" />

</android.support.constraint.ConstraintLayout>